[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
nom = "6.0.1"
reduce = "0.1.3"
bimap = "0.5.3"
pathfinding = "2.1.0"